--- a/frontend/app/global.css
+++ b/frontend/app/global.css
@@ -15,9 +15,13 @@ h2,
 h3,
 h4,
 h5,
-h6,
-p {
+h6 {
 	font-weight: 400;
 	margin: 0;
 	padding: 0;
+}
+
+p {
+	margin: 0;
+	margin-bottom: 1rem;
 }
