--- a/frontend/app/dashboard/dashboard.css
+++ b/frontend/app/dashboard/dashboard.css
@@ -6,56 +6,28 @@
 .dashboard-title {
 	text-align: center;
 	margin-bottom: 0.5rem;
+	font-weight: bolder;
 }
 
-.fit-score-chart {
-	margin-bottom: 2rem;
-	text-align: center;
+.card-container-fit {
+	font-family: Arial, sans-serif;
+	padding: 1rem;
 }
 
 .fit-score-chart-title {
 	margin-bottom: 0.5rem;
-}
-
-.fit-score-bar-container {
-	position: relative;
-	width: 100%;
-	max-width: 250px;
-	margin: 0 auto;
-}
-
-.fit-score-bar-background {
-	width: 100%;
-	height: 30px;
-	background-color: #f0f0f0;
-	border-radius: 5px;
-	overflow: hidden;
-}
-
-.fit-score-bar {
-	height: 100%;
-	transition: width 0.3s ease;
-}
-
-.fit-score-label {
-	position: absolute;
-	top: 5px;
-	left: 50%;
-	transform: translateX(-50%);
-	font-size: 1rem;
-	font-weight: bolder;
+	font-weight: bold;
+	text-align: center;
 }
 
 .card-container-skills-match {
 	display: flex;
 	justify-content: center;
-	margin: 0 auto;
 	text-align: center;
 }
 
 .skills-matched-list {
 	width: 100%;
-	padding: 0;
 	text-align: center;
 	list-style-type: disc;
 	padding-left: 1.5rem;
@@ -67,10 +39,10 @@
 	margin: 0 auto;
 	text-align: center;
 }
+
 .improvements-list {
 	width: 100%;
-	padding: 0;
 	text-align: center;
 	list-style-type: disc;
-	padding-left: 1.5rem;
+	padding-left: 2rem;
 }
