--- a/frontend/app/dashboard/dashboard.css
+++ b/frontend/app/dashboard/dashboard.css
@@ -5,25 +5,30 @@
 
 .dashboard-title {
 	text-align: center;
-	margin-bottom: 0.5rem;
+	gap: 1rem;
 	font-weight: bolder;
 }
 
 .card-container-fit {
+	display: flex;
+	justify-content: center;
+	text-align: center;
 	font-family: Arial, sans-serif;
 	padding: 1rem;
+	gap: 1rem;
 }
 
 .fit-score-chart-title {
-	margin-bottom: 0.5rem;
-	font-weight: bold;
+	margin-bottom: 1rem;
 	text-align: center;
 }
 
 .card-container-skills-match {
 	display: flex;
+	padding: 1rem;
 	justify-content: center;
 	text-align: center;
+	gap: 1rem;
 }
 
 .skills-matched-list {
@@ -34,6 +39,7 @@
 }
 
 .card-container-improvement {
+	padding: 1rem;
 	display: flex;
 	justify-content: center;
 	margin: 0 auto;
