--- a/frontend/app/dashboard/dashboard.css
+++ b/frontend/app/dashboard/dashboard.css
@@ -1,6 +1,22 @@
+.card-container-fit,
+.card-container-skills-match,
+.card-container-improvement {
+	text-align: center; /* Centers text inside the card */
+	font-family: Arial, sans-serif;
+	padding: 1rem; /* Space around text */
+	margin: auto; /* Center the card horizontally */
+	max-width: 100%; /* Ensure it stays responsive with max*/
+	min-width: 25%;
+	margin-bottom: 1rem;
+	gap: 1rem;
+}
+
 .dashboard-container {
 	font-family: Arial, sans-serif;
 	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
 
 .dashboard-title {
@@ -9,46 +25,7 @@
 	font-weight: bolder;
 }
 
-.card-container-fit {
-	display: flex;
-	justify-content: center;
-	text-align: center;
-	font-family: Arial, sans-serif;
-	padding: 1rem;
-	gap: 1rem;
-}
-
 .fit-score-chart-title {
 	margin-bottom: 1rem;
 	text-align: center;
-}
-
-.card-container-skills-match {
-	display: flex;
-	padding: 1rem;
-	justify-content: center;
-	text-align: center;
-	gap: 1rem;
-}
-
-.skills-matched-list {
-	width: 100%;
-	text-align: center;
-	list-style-type: disc;
-	padding-left: 1.5rem;
-}
-
-.card-container-improvement {
-	padding: 1rem;
-	display: flex;
-	justify-content: center;
-	margin: 0 auto;
-	text-align: center;
-}
-
-.improvements-list {
-	width: 100%;
-	text-align: center;
-	list-style-type: disc;
-	padding-left: 2rem;
 }
