--- a/frontend/app/dashboard/dashboard.module.css
+++ b/frontend/app/dashboard/dashboard.module.css
@@ -78,5 +78,12 @@
 	top: 20px;
 	right: 20px;
 	display: flex;
+	flex-direction: column;
+	align-items: end;
 	gap: 10px;
+	min-width: 20ch;
+}
+
+.buttonContainer > * {
+	width: 100%;
 }
