--- a/frontend/app/dashboard/dashboard.module.css
+++ b/frontend/app/dashboard/dashboard.module.css
@@ -55,3 +55,35 @@
 .ratingScore {
 	margin-left: 0.5rem;
 }
+
+.floatingButtonContainer {
+	position: fixed;
+	top: 20px;
+	right: 20px;
+	z-index: 1000;
+	display: flex;
+	gap: 10px; /* Adds space between the dropdown and button */
+	align-items: center;
+}
+
+.dropdown {
+	padding: 0.4rem;
+	font-size: 1rem;
+	border-radius: 5px;
+	border: 1px solid #ccc;
+}
+
+.buttonContainer {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: end;
+	gap: 10px;
+	min-width: 20ch;
+}
+
+.buttonContainer > * {
+	width: 100%;
+}
